test/function/body_must_be_block.lox
// error: expected '{' before function body
// error:  expect '}' after block
fn f() 123
